# revoice

./: .gitignore  AGENTS.md  NEXT_STEPS_PROMPT.md  PLAN-GPTs.md  PLAN-media-converter.md  PLAN.md  README.md  REBUILD_PROMPT.md  pyproject.toml  revoice-symbol.icns  revoice.icns  start-clean.sh  start-perfect.sh  start-revoice.sh
archive/: VSL_aac_128k_mono_16k.srt  VSL_aac_128k_mono_16k.txt  VSL_aac_128k_mono_16k.vtt  clipy.srt  clipy.txt  clipy.vtt  clipy_aac_128k_mono_16k-1.srt  clipy_aac_128k_mono_16k-1.vtt  clipy_aac_128k_mono_16k.txt  リキッドデス(1).srt  リキッドデス(1).txt  リキッドデス(1).vtt  リキッドデス(1)_aac_128k_mono_16k.srt  リキッドデス(1)_aac_128k_mono_16k.txt  リキッドデス(1)_aac_128k_mono_16k.vtt  リキッドデス.srt  リキッドデス.txt  リキッドデス.vtt  リキッドデス_aac_128k_mono_16k.srt  リキッドデス_aac_128k_mono_16k.txt  リキッドデス_aac_128k_mono_16k.vtt
electron/: .gitignore  README.md  main.js  package-lock.json  package.json  preload.js
electron/history/: storage.js
electron/renderer/: index.html  tsconfig.json  vite.config.ts
electron/renderer/src/: App.tsx  styles.css  types.d.ts
electron/scripts/: prepare-python.js
revoice/: cli.py  postprocess.py
